--- a/web_tech/html&css/css_grammer/layout.html
+++ b/web_tech/html&css/css_grammer/layout.html
@@ -1,3 +1,29 @@
+
+
+#size
+width
+hegith
+min-hegiht
+
+#elemetn_position
+position
+left
+top
+text-align
+margin
+padding
+float
+vertical-align
+
+#presentation
+font-family, font-weight, font-size, color, text-decoration,
+border, border-color, border-style, border-width,
+background-color, background-image, background-position,
+list-style-type
+
+
+
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
