--- a/web_tech/html&css/html/form.html
+++ b/web_tech/html&css/html/form.html
@@ -1,27 +1,33 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    #타입
-    #text,password
-    #radio, checkbox
-    #select
-    #submit reset button image
-    #file hidden
+<form class="" action="index.html" method="post">
 
-    #속성
-    #name : 애플리케이션에 전달될 변수명
-    #value : 입력창 초기문
-    #size : 입력 크기 지정
-    #maxlength : 최대 크기
-    #readonly
-    #disabled
+</form>
 
-    <form class="" action="index.html" method="post">
-      <input type="text" name="" value="">
-    </form>
-  </body>
-</html>
+#fieldset
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<fieldset>
+  <legend>박스 제목</legend>
+</fieldset>
