--- a/web_tech/javascript/event.html
+++ b/web_tech/javascript/event.html
@@ -1,4 +1,29 @@
 
-#onClick()
 
-input
+onClick()
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#onClick
+ex1
+<input type="button" onClick="func1" name="" value="">
+<script type="text/javascript">
+  function func1(){
+    document.write("ex")
+  }
+</script>
+
+ex2
+<input type="text" onCLick ="location.href = '링크'" name="" value="">
