--- a/web_tech/test.html
+++ b/web_tech/test.html
@@ -5,6 +5,16 @@
     <title></title>
   </head>
   <body>
-    <input type="tel" name="" value="" pattern = "d{3,4}-\d{4}" placeholder="형식 010-0000-0000">
-  </body>
+    <p>dd</p>
+    <script type="text/javascript">
+
+      function func1(){
+        document.write("3");
+      }
+      setTimeout(func1, 1000)
+    </script>
+
+    <script type="text/javascript">
+
+    </script>
 </html>
